--- a/module-1/css-homework-210529/index.html
+++ b/module-1/css-homework-210529/index.html
@@ -52,12 +52,8 @@
                 <td>thangnh0511@gmail.com</td>
             </tr>
             <tr>
-                <td width="30%">Phone number</td>
-                <td>0101010101</td>
-            </tr>
-            <tr>
-                <td width="30%">Menu</td>
-                <td id="nav"><a href="https://github.com/thangnh0511/codegym" target="_blank">https://github.com/thangnh0511/codegym</a></td>
+                <td width="30%">Github</td>
+                <td id="nav"><a href="https://github.com/thangnh0511/codegym/tree/main/module-1/css-homework-210529" target="_blank">Click here</a></td>
             </tr>
         </table>
         <br>
