--- a/module-1/css-homework-210529/index.html
+++ b/module-1/css-homework-210529/index.html
@@ -218,6 +218,9 @@
                                         </table>
                                     </div>
                                 </div>
+                                <div id="footer">
+                                    
+                                </div>
                             </td>
                         </tr>
                     </table>     
