--- a/module-1/css-lession-3/file-3.html
+++ b/module-1/css-lession-3/file-3.html
@@ -8,7 +8,7 @@
     <title>Lession 3 - File 3</title>
 </head>
 <body>
-    <div id="all">
+    <!-- <div id="all">
         <div class="dong">
             <div class="xam"></div>
             <div class="trang"></div>
@@ -41,8 +41,8 @@
             <div class="bur"></div>
             <div class="whi"></div>
         </div>
-    </div>
-    <br><hr><br>
+    </div> -->
+    <!-- <br><hr><br>
     <div id="p-3">
         <div class="d-3-1">
         </div>
@@ -62,8 +62,8 @@
             <div class="tru margin-4-1"></div>
             <div class="tru margin-4"></div>
         </div>
-    </div>
-    <br><hr><br>
+    </div> -->
+    <!-- <br><hr><br>
     <div id="p-3">
         <div class="d-3-1">
         </div>
@@ -84,26 +84,56 @@
             <div class="tru-2"></div>
         </div>
     </div>
-    <br><hr><br>
-    <!-- <div id="p-4">
-        <div class="d-3-1">
+    <br><hr><br> -->
+    <div id="box-all">
+        <div id="box-1">
+            <div id="box-1-1">
+                <div class="dong-1">
+                    <div class="box-1-xam"></div>
+                    <div class="box-1-trang"></div>
+                    <div class="box-1-xam"></div>
+                </div>
+                <div class="dong-1">
+                    <div class="box-1-trang"></div>
+                    <div class="box-1-xam"></div>
+                    <div class="box-1-trang"></div>
+                </div>
+                <div class="dong-1">
+                    <div class="box-1-xam"></div>
+                    <div class="box-1-trang"></div>
+                    <div class="box-1-xam"></div>
+                </div>
+                
+            </div>
+            <div id="box-1-2">
+                <div class="dong-2">
+                    <div class="red-2"></div>
+                    <div class="yel-2 space-2"></div>
+                    <div class="gre-2 space-2"></div>
+                </div>
+                <div class="dong-2">
+                    <div class="blu-2 space-2"></div>
+                    <div class="bur-2 space-2"></div>
+                </div>
+            </div>
         </div>
-        <div class="d-3-1-1">
-            <div class="tru"></div>
-            <div class="tru-2"></div>
+        <div id="box-2">
+            <div class="dong-3-1">
+                <div class="red-bar-3"></div>
+                <div class="xam-bar-l"></div>
+                <div class="xam-bar-r"></div>
+            </div>
+            <div class="dong-3-2">
+                <div class="red-bar-3"></div>
+                <div class="xam-bar-l"></div>
+                <div class="xam-bar-r"></div>
+            </div>
+            <div class="dong-3-3">
+                <div class="red-bar-3"></div>
+                <div class="xam-bar-l"></div>
+                <div class="xam-bar-r"></div>
+            </div>
         </div>
-        <div class="d-3-2">
-        </div>
-        <div class="d-3-2-2">
-            <div class="tru"></div>
-            <div class="tru-2"></div>
-        </div>
-        <div class="d-3-3">
-        </div>
-        <div class="d-3-3-3">
-            <div class="tru"></div>
-            <div class="tru-2"></div>
-        </div>
-    </div> -->
+    </div>
 </body>
 </html>
