update bai tap 04-06-2021

--- a/module-1/css-lession-pratice-2/index.html
+++ b/module-1/css-lession-pratice-2/index.html
@@ -23,68 +23,76 @@
     </div>
     <div id="all">
         <div id="box">
-            <div id="page-1">
-                <div id="header">
-                    <h1>Header</h1>
-                </div>
-                <div id="content">
-                    <h1>Content</h1>
-                </div>
-                <div id="footer">
-                    <h1>Footer</h1>
-                </div>
-            </div>
-            <div id="page-2">
-                <div id="sidebar-2">
-                    <h1 class="rotate">Sidebar</h1>
-                </div>
-                <div id="sub-box-2">
-                    <div id="header-2">
-                        <h1>header</h1>
+            <a href="#">
+                <div id="page-1">
+                    <div id="header">
+                        <h1>Header</h1>
                     </div>
-                    <div id="content-2">
-                        <h1>content</h1>
+                    <div id="content">
+                        <h1>Content</h1>
                     </div>
-                    <div id="footer-2"><h1>footer</h1></div>
+                    <div id="footer">
+                        <h1>Footer</h1>
+                    </div>
                 </div>
-            </div>
+            </a>
+            <a href="">
+                <div id="page-2">
+                    <div id="sidebar-2">
+                        <h1 class="rotate">Sidebar</h1>
+                    </div>
+                    <div id="sub-box-2">
+                        <div id="header-2">
+                            <h1>header</h1>
+                        </div>
+                        <div id="content-2">
+                            <h1>content</h1>
+                        </div>
+                        <div id="footer-2"><h1>footer</h1></div>
+                    </div>
+                </div>
+            </a>
         </div>
         <div id="box">
-            <div id="page-3">
-                <div id="header-3">
-                    <h1>header</h1>
-                </div>
-                <div id="sub-box-3">
-                    <div id="sidebar-3">
-                        <h1>sidebar</h1>
+            <a href="">
+                <div id="page-3">
+                    <div id="header-3">
+                        <h1>header</h1>
                     </div>
-                    <div id="content-3">
-                        <h1>content</h1>
+                    <div id="sub-box-3">
+                        <div id="sidebar-3">
+                            <h1>sidebar</h1>
+                        </div>
+                        <div id="content-3">
+                            <h1>content</h1>
+                        </div>
+                        <div id="sidebar-ad-3">
+                            <h1 class="rotate">sidebar&minus;ad</h1>
+                        </div>
                     </div>
-                    <div id="sidebar-ad-3">
-                        <h1 class="rotate">sidebar&minus;ad</h1>
-                    </div>
-                </div>
-                <div id="footer-3">
-                    <h1>footer</h1>
-                </div>
-            </div>
-            <div id="page-4">
-                <div id="header-4">
-                    <h1>header</h1>
-                </div>
-                <div id="sub-box-4">
-                    <div id="side-bar-4">
-                        <h1 class="rotate">sidebar</h1>
-                    </div>
-                    <div id="content-4">
-                        <h1>content</h1>
+                    <div id="footer-3">
+                        <h1>footer</h1>
                     </div>
                 </div>
-                <div id="footer-4">
-                    <h1>footer</h1>
+            </a>
+            <a href="#">
+                <div id="page-4">
+                    <div id="header-4">
+                        <h1>header</h1>
+                    </div>
+                    <div id="sub-box-4">
+                        <div id="side-bar-4">
+                            <h1 class="rotate">sidebar</h1>
+                        </div>
+                        <div id="content-4">
+                            <h1>content</h1>
+                        </div>
+                    </div>
+                    <div id="footer-4">
+                        <h1>footer</h1>
+                    </div>
                 </div>
-            </div>
+            </a>
         </div>    
     </div>
 </body>
