--- a/module-2-jsbasic/index.html
+++ b/module-2-jsbasic/index.html
@@ -28,6 +28,8 @@
         }
         .form-input-2 > div {
             margin-top: 20px;
+            padding-left: 0;
+            padding-right: 0;
         }
         .form-input-2 label {
             text-align: left;
