--- a/module-2-jsbasic/index.html
+++ b/module-2-jsbasic/index.html
@@ -37,6 +37,9 @@
         .form-input-2 input {
             border-radius: 4px;
         }
+        .form-input-2 .submit {
+            width: 100%;
+        }
     </style>    
 </head>
 <body>
@@ -87,8 +90,8 @@
                     <label for="" class="col-4">Password</label>
                     <input type="password" class="col-8" placeholder="Nhập password" required>
                 </div>
-                <div class=" btn btn-primary">
-                    Login
+                <div>
+                    <input type="submit" value="Login" class=" submit btn btn-primary">
                 </div>
                 
             </form>
