--- a/module-2-jsbasic/2-bien/index.html
+++ b/module-2-jsbasic/2-bien/index.html
@@ -14,16 +14,36 @@
             line-height: 60px;
             background: #ccc;
             padding:0px 20px;
+            font-size: 24px;
+            font-weight: 500;
         }
     </style>
 </head>
 <body>
-    <div class="container my-5">
+    <!-- <div class="container my-5">
         <span>Nhập số tiền cần gửi</span>
         <input id="money" type="text">
         <button onclick="rateCalulate()">Tính tiền lãi</button>
         <div id="result"></div>
     </div>
+    <div class="container">
+        <form action="">
+            <label for="">Số tiền gửi</label>
+            <input type="number" name="" id="">
+            <label for="">Số tháng gửi</label>
+            <input type="number" name="" id="">
+
+        </form>
+    </div> -->
+
+    <!-- C sang F  -->
+    <div class="container my-5">
+        <label for="">Nhập độ C</label>
+        <input id="c-temp" type="number">
+        <button onclick="tempTransform()">Chuyển đổi</button>
+        <div id="result"></div>
+    </div>
+    
 
     <script src="./js/tools.js"></script>
 </body>
