--- a/module-2-jsbasic/2-bien (3)/baitap.html
+++ b/module-2-jsbasic/2-bien (3)/baitap.html
@@ -7,91 +7,7 @@
     <title>Document</title>
     <link rel="stylesheet" href="./css/style.css">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous">  
-    <style>
-        form {
-    width: 500px;
-    min-height: 50px;
-    border-radius: 4px;
-    border: 1px solid #ccc;
-    padding: 20px;
-    margin: auto;
-}
 
-table {
-    margin: auto;
-    width: 500px !important;
-    text-align: center;
-}
-table th:nth-child(1) {
-    width: 200px;
-}
-
-label {
-    color: black;
-    font-size: 14px;
-    font-weight: 500;
-}
-
-input {
-    border-radius: 4px;
-    border: 2px solid salmon;
-}
-
-.form-input {
-    width: 100%;
-    display: grid;
-        grid-template-columns: 20% auto;
-    margin: 10px 20px 0px 0px ;
-    align-items: center;
-}
-.form-input input {
-    width: 100%;
-}
-.form-input-2 {
-    width: 100%;
-    display: grid;
-        grid-template-columns: 200px 200px;
-    margin: 10px 20px 0px 0px ;
-    justify-content: space-between;
-    align-items: center;
-}
-.input-2 {
-    width: 200px;
-    margin-bottom: 20px;
-}
-.input-2 input {
-    width: 100%;
-}
-
-a {
-    width: 100% !important;
-}
-
-button {
-    margin-top: 20px;
-    width: 100%;
-    border-radius: 4px;
-    color: rgb(37, 95, 37);
-    background: rgb(161, 240, 161);
-    height: 38px;
-    font-weight: bold;
-    border: 2px solid rgb(37, 95, 37);
-}
-
-#result {
-    padding: 0 20px;
-    line-height: 40px;
-    margin-top: 20px;
-    width: 100%;
-    height: 40px;
-    background: #ccc;
-    border-radius: 4px;
-    font-size: 22px;
-    font-weight: 500;
-    text-align: center;
-}
-
-    </style>
 </head>
 <body>
     <div class="container">
@@ -135,7 +51,9 @@ button {
                         <td>${i}</td>
                         <td>${paidByMonth}</td> <tr>`;
                     listItem = listItem + itemPaid ;
-
+                    console.log(listItem);
+                    console.log(paidByMonth);
+                    console.log(i);
                 }
                 document.getElementById('table').innerHTML =`<thead>
                         <th>Tháng</th>
