--- a/reactjs/myPractice/index.html
+++ b/reactjs/myPractice/index.html
@@ -4,8 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/base.css">
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="css/base.css">
+    <link rel="stylesheet" href="css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHg4CGR2D7kSs0v4LLanw2qksYuRlEzO+tcaEPQogQ0KaoGN26/zrn20ImR1DfuLWnOo7aBA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 
@@ -13,7 +13,7 @@
 </head>
 <body>
     <div class="search-area">
-        <div class="search-title">Giffy Search</div>
+        <div class="search-title" onclick="clearMemory()">Giffy Search</div>
         <div class="search-box">
             <input id='input' class="search-input-box" type="text" placeholder="Search something" onchange="requestData()">
             <div class="search-button" onclick="requestData()">
@@ -25,6 +25,6 @@
     </div>
     
 
-    <script src="./js/run.js"></script>
+    <script src="js/run.js"></script>
 </body>
 </html>
